--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <h1>Hello Worlds</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-<iframe src="https://ide.geeksforgeeks.org/tryit.php"
-            height="300"
-            width="400"
-            marginwidth="50"
-            scrolling="no">
-    </iframe>
+<iframe 
+src
+="https://www.w3schools.com"></iframe
+    
 </body>
 </html>
