--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello Worlds</h1>
 <p>I'm hosted with GitHub Pages.</p>
-
+<a class="twitter-timeline" href="https://twitter.com/AndrewSemotiuk?ref_src=twsrc%5Etfw">Tweets by AndrewSemotiuk</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100076180417600%26sk%3Dabout&tabs=timeline&width=340&height=331&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1289310767752445" width="340" height="1000" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>    
 </body>
 </html>
